--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           </div>
           <div class="portfolio-container">
             <div class="portfolio-wrapper">
-              <img src="/assets/portfolio-1.png" alt="Portfolio 1" />
+              <img src="assets/portfolio-1.png" alt="Portfolio 1" />
               <h4>Digital Marketing Agency Website</h4>
               <p>
                 This is a website for a client who want to achieve their goals
@@ -267,7 +267,7 @@
             </div>
 
             <div class="portfolio-wrapper">
-              <img src="/assets/portfolio-3.png" alt="Portfolio 3" />
+              <img src="assets/portfolio-3.png" alt="Portfolio 3" />
               <h4>Digital Marketing Agency Website</h4>
               <p>
                 This is a website for a client who want to achieve their goals
@@ -277,7 +277,7 @@
             </div>
 
             <div class="portfolio-wrapper">
-              <img src="/assets/portfolio-2.png" alt="Portfolio 2" />
+              <img src="assets/portfolio-2.png" alt="Portfolio 2" />
               <h4>Digital Marketing Agency Website</h4>
               <p>
                 This is a website for a client who want to achieve their goals
@@ -287,7 +287,7 @@
             </div>
 
             <div class="portfolio-wrapper">
-              <img src="/assets/portfolio-4.png" alt="Portfolio 4" />
+              <img src="assets/portfolio-4.png" alt="Portfolio 4" />
               <h4>Digital Marketing Agency Website</h4>
               <p>
                 This is a website for a client who want to achieve their goals
@@ -326,7 +326,7 @@
             <div
               class="client-detail d-flex justify-content-start align-items-center"
             >
-              <img src="/assets/avatar.png" alt="Avatar" />
+              <img src="assets/avatar.png" alt="Avatar" />
               <div class="wrapper">
                 <h4>Emily Stones</h4>
                 <p>CEO, Marketing Guru</p>
@@ -342,7 +342,7 @@
             <div
               class="client-detail d-flex justify-content-start align-items-center"
             >
-              <img src="/assets/avatar.png" alt="Avatar" />
+              <img src="assets/avatar.png" alt="Avatar" />
               <div class="wrapper">
                 <h4>Emily Stones</h4>
                 <p>CEO, Marketing Guru</p>
@@ -358,7 +358,7 @@
             <div
               class="client-detail d-flex justify-content-start align-items-center"
             >
-              <img src="/assets/avatar.png" alt="Avatar" />
+              <img src="assets/avatar.png" alt="Avatar" />
               <div class="wrapper">
                 <h4>Emily Stones</h4>
                 <p>CEO, Marketing Guru</p>
@@ -374,7 +374,7 @@
             <div
               class="client-detail d-flex justify-content-start align-items-center"
             >
-              <img src="/assets/avatar.png" alt="Avatar" />
+              <img src="assets/avatar.png" alt="Avatar" />
               <div class="wrapper">
                 <h4>Emily Stones</h4>
                 <p>CEO, Marketing Guru</p>
@@ -474,4 +474,5 @@
   </body>
 
 </html>
+
 
